salesforce/force-app/main/default/objects/DealRegistration__c/DealRegistration__c.object-meta.xml
<CustomObject>
    <description>Partner-registered deals pushed from the Partner Portal (Firestore) via the JWT integration. Keyed for idempotent upsert by PartnerPortalDealID__c.</description>
    <label>Deal Registration</label>
    <pluralLabel>Deal Registrations</pluralLabel>
    <nameField>
        <label>Deal Registration Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>