salesforce/force-app/main/default/objects/DealRegistration__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <description>Deal ARR (deal.arr). Currency by default; switch to Number(16,2) if the org has no currency.</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>