salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerCompanyName__c.field-meta.xml
<CustomField>
    <fullName>CustomerCompanyName__c</fullName>
    <label>Customer Company Name</label>
    <type>Text</type>
    <length>50</length>
</CustomField>