salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerCompanySize__c.field-meta.xml
<CustomField>
    <fullName>CustomerCompanySize__c</fullName>
    <label>Customer Company Size</label>
    <type>Text</type>
    <length>20</length>
</CustomField>