salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerContactEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerContactEmail__c</fullName>
    <label>Customer Contact Email</label>
    <description>Contact email (clipped to 80 in code = Email field length). Switch to Text(80) if malformed values must not fail the upsert.</description>
    <type>Email</type>
</CustomField>