salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>CustomerContactFirstName__c</fullName>
    <label>Customer Contact First Name</label>
    <type>Text</type>
    <length>20</length>
</CustomField>