salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerContactLastName__c.field-meta.xml
<CustomField>
    <fullName>CustomerContactLastName__c</fullName>
    <label>Customer Contact Last Name</label>
    <type>Text</type>
    <length>20</length>
</CustomField>