salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerContactTitle__c.field-meta.xml
<CustomField>
    <fullName>CustomerContactTitle__c</fullName>
    <label>Customer Contact Title</label>
    <type>Text</type>
    <length>20</length>
</CustomField>