salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerCountry__c.field-meta.xml
<CustomField>
    <fullName>CustomerCountry__c</fullName>
    <label>Customer Country</label>
    <type>Text</type>
    <length>20</length>
</CustomField>