salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerOrgType__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrgType__c</fullName>
    <label>Customer Org Type</label>
    <type>Text</type>
    <length>20</length>
</CustomField>