salesforce/force-app/main/default/objects/DealRegistration__c/fields/CustomerWebsite__c.field-meta.xml
<CustomField>
    <fullName>CustomerWebsite__c</fullName>
    <label>Customer Website</label>
    <type>Url</type>
</CustomField>