salesforce/force-app/main/default/objects/DealRegistration__c/fields/industry__c.field-meta.xml
<CustomField>
    <fullName>industry__c</fullName>
    <label>Industry</label>
    <description>API name is intentionally lowercase (industry__c) to match this org — the code writes r.industry__c.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>