salesforce/force-app/main/default/objects/DealRegistration__c/fields/PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccount__c</fullName>
    <label>Partner Account</label>
    <description>Attributes the deal to the partner's Account (set from partners/{uid}.salesforceAccountId) so account-scoped pulls see it.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Deal_Registrations</relationshipName>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>