salesforce/force-app/main/default/objects/DealRegistration__c/fields/PartnerPortalDealID__c.field-meta.xml
<CustomField>
    <fullName>PartnerPortalDealID__c</fullName>
    <label>Partner Portal Deal ID</label>
    <description>External Id / idempotent upsert key. Holds the portal client token (or a legacy DR-YYYY-NNNNNN id). SF_EXTERNAL_ID_FIELD.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>