salesforce/force-app/main/default/objects/DealRegistration__c/fields/RequestedLicenseInfo__c.field-meta.xml
<CustomField>
    <fullName>RequestedLicenseInfo__c</fullName>
    <label>Requested License Info</label>
    <description>Customer Salesforce orgs serialized as a JSON array string (clipped to 32768 in code).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>