salesforce/force-app/main/default/objects/DealRegistration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Deal status. Values are load-bearing (lowercase) — the pull only mirrors back a status in this set.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <default>true</default>
                <label>pending</label>
            </value>
            <value>
                <fullName>accepted</fullName>
            </value>
            <value>
                <fullName>won</fullName>
            </value>
            <value>
                <fullName>lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>